# CUDA-2026

./: .gitignore
OpenCV_3_License_Plate_Recognition_CPU/: CMakeLists.txt  Conio.h  DetectChars.cpp  DetectChars.h  Main.cpp  Main.h  timing_utils.h
OpenCV_3_License_Plate_Recognition_CPU/archive/: DetectChars.cpp  DetectPlates.cpp
OpenCV_3_License_Plate_Recognition_GPU/: CMakeLists.txt  DetectChars.cpp  DetectChars.h  DetectPlates.cpp  DetectPlates.h  DeviceImage.cuh  HostImage.h  ImageIO.cpp  Main.cpp  Main.h  Preprocess.cu  Preprocess.cuh  convert_knn_data.py  convert_to_ppm.py  normalize_images.py
OpenCV_3_License_Plate_Recognition_GPU/DocsAndPresentation/: classdiagram.puml  diagram.puml  flow.puml  pipeline_activity.puml
OpenCV_3_License_Plate_Recognition_GPU/include/common/: Types.h
OpenCV_3_License_Plate_Recognition_GPU/include/device/: CCL.cuh  ImageOps.cuh  KNN.cuh  OtsuThreshold.cuh  Preprocess.cuh
OpenCV_3_License_Plate_Recognition_GPU/include/host/: CharGrouping.h  HostImage.h  ImageIO.h  PipelineContext.h  PlateRecognizer.h  PossibleChar.h  PossiblePlate.h  SceneAnalyzer.h
OpenCV_3_License_Plate_Recognition_GPU/src/device/: CCL.cu  ImageOps.cu  KNN.cu  OtsuThreshold.cu  Preprocess.cu
OpenCV_3_License_Plate_Recognition_GPU/src/host/: ImageIO.cpp  Main.cpp  PipelineContext.cpp  PlateRecognizer.cpp  SceneAnalyzer.cpp
Project/ProjectDescription/: description.tex  main.tex
Week-1/: mat_mul  mat_mul.cu  mem_cpy  mem_cpy.cu  test_cuda  test_cuda.cu
Week-2/: Makefile  coalesced-mem-access.cu  main.cpp  reduction  sum_reduction.cu  sum_reduction.cuh
Week-4/: Makefile  main.cu  reduction  reduction.cu  reduction.cuh  reduction_gh200_report.nsys-rep  reduction_gh200_report.sqlite  run_nsys.sh
